# onyx_mk3

./: .gitignore  AXIM_EDGE_INTEGRATION.md  PARITY.md  add_playbook.py  add_record.py  add_record_fleet_health.py  add_record_tools.py  broadcast.py  clippy_ignore.patch  commit_plan.md  fix_clippy.py  fix_clippy2.py  fix_clippy_3.py  fix_commands_clippy.py  fix_deps.py  fix_dirs.py  fix_evaluate_health_inject.py  fix_exec.py  fix_exec_details.py  fix_health.py  fix_health_compile.py  fix_main.py  fix_main_again.py  fix_main_spawns.py  fix_main_telemetry.py  fix_map.py  fix_match.py  fix_memory2.py  fix_memory_clippy.py  fix_onyx.py  fix_playbook_insert.py  fix_poll_loop_end.py  fix_poll_loop_return.py  fix_return.py  fix_rust_clippy.py  fix_rwlock.py  fix_rwlock2.py  fix_rwlock3.py  fix_sed.py  fix_syntax.py  (+82 more)
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs  lib.rs.orig  lib.rs.rej  playbook_cmd.patch
rust/crates/mock-anthropic-service/: Cargo.toml
rust/crates/mock-anthropic-service/.claw/sessions/aeafd06e3512045f/: session-1776724383949-0.jsonl  session-1776725157856-0.jsonl  session-1776725380528-0.jsonl  session-1776740704621-0.jsonl  session-1776784768180-0.jsonl  session-1776795187570-0.jsonl  session-1776795313111-0.jsonl  session-1776795406622-0.jsonl  session-1776795592397-0.jsonl  session-1776814342569-0.jsonl  session-1776814709574-0.jsonl  session-1776879312071-0.jsonl  session-1776883526491-0.jsonl  session-1776974639826-0.jsonl  session-1777000235715-0.jsonl  session-1777004012051-0.jsonl  session-1777005556102-0.jsonl  session-1777007152883-0.jsonl  session-1777008361869-0.jsonl  session-1777159221227-0.jsonl  session-1777159504033-0.jsonl  (+31 more)
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/mock-anthropic-service/tests/: scenario.rs  scenario.rs.orig  scenario.rs.rej
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  main.rs  render.rs
rust/crates/rusty-claude-cli/src/tui/: status_bar.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/.claw/: lane-events.jsonl
rust/crates/tools/.onyx/: lane-events.jsonl
rust/crates/tools/src/: axim_ops.rs  axim_vault.rs  chatbase_ops.rs  cloudflare_ops.rs  communication_ops.rs  executive_sync.rs  github_ops.rs  lib.rs  lib.rs.orig  lib.rs.rej  network_ops.rs  playbooks.rs  strategy_ops.rs  supabase_ops.rs  vault.patch  vault_tool.patch  vault_tool2.patch  vector_memory.rs  wordpress_admin.rs
(+154 files in other folders)
