[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins" }
reqwest = { version = "0.13.2", features = ["json"] }
runtime = { path = "../runtime" }
serde_json.workspace = true
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
