[package]
name = "mock-anthropic-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mock-anthropic-service"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }

[lints]
workspace = true

[dev-dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
